--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@mui/material": "^5.10.10",
     "@mui/styles": "^5.10.10",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "pathseg": "^1.2.1",
     "prop-types": "^15.8.1",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.4.2",
     "react-scripts": "latest",
-    "socket.io-client": "^4.5.3",
-    "socketio": "^1.0.0"
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3"
   },
   "browserslist": {
     "production": [
